codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__mcp_tools_output_masks_sensitive_values.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
/mcp

🔌  MCP 工具

  • docs
    • 状态：已启用
    • 身份验证：不支持
    • 命令：docs-server
    • 环境变量：TOKEN=*****, APP_TOKEN=*****
    • 工具：list
    • 资源：（无）
    • 资源模板：（无）

  • http
    • 状态：已启用
    • 身份验证：不支持
    • URL: https://example.com/mcp
    • HTTP 标头：Authorization=*****
    • 环境变量 HTTP 标头：X-API-Key=API_KEY_ENV
    • 工具：ping
    • 资源：（无）
    • 资源模板：（无）
