codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__pnpm_update_available_history_cell_snapshot.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
╭─────────────────────────────────────────────────╮
│ ✨ 有可用更新！ 0.0.0 -> 9.9.9                  │
│ 运行 pnpm add -g @openai/codex 进行更新。       │
│                                                 │
│ 查看完整发行说明：                              │
│ https://github.com/openai/codex/releases/latest │
╰─────────────────────────────────────────────────╯
