codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__ps_output_halfwidth_sound_marks_snapshot.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
/ps

后台终端

  • echo ｶﾞﾊﾟｶﾞﾊﾟ [...]
    ↳ output ｶﾞﾊﾟ [...]
