codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__safety_access_block_event_snapshot.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
ⓘ 无法显示此内容
  对于涉及生物研究及可能带来安全风险的应用请求，我们会格外谨慎。符合条件的研究
  人员可以申请“可信访问”。
  可信访问: https://chatgpt.com/r/b749fb02595e04c3007a54375f3f4374
  了解更多: https://help.openai.com/en/articles/20001326
