codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__session_header_clamps_to_narrow_width.snap
---
source: tui/src/history_cell/tests.rs
expression: "render_lines(&lines).join(\"\\n\")"
---
╭──────────────────────────────────────────╮
│ >_ OpenAI Codex (vtest)                  │
│                                          │
│ 模型： gpt-5.6-sol xhigh   快速   /mode… │
│ 目录： project                           │
│ 权限： YOLO 模式                         │
╰──────────────────────────────────────────╯
