codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__session_header_halfwidth_directory.snap
---
source: tui/src/history_cell/tests.rs
expression: "format!(\"{buf:?}\")"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 42, height: 6 },
    content: [
        "╭────────────────────────────────────────╮",
        "│ >_ OpenAI Codex (vtest)                │",
        "│                                        │",
        "│ 模型： gpt-5   /model 更改             │", // hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (25, " "), (27, " ")]
        "│ 目录： …ﾊﾟｶﾞﾊﾟｶﾞﾊﾟｶﾞﾊﾟｶﾞﾊﾟｶﾞﾊﾟ-project │", // hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (27, " "), (29, " "), (31, " ")]
        "╰────────────────────────────────────────╯",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 5, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 17, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 3, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 5, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 7, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 9, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 17, y: 3, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 23, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 25, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 26, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 27, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 3, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 5, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 7, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 9, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 40, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
    ]
}
